--- a/assets/style/scss/quizBlock.scss
+++ b/assets/style/scss/quizBlock.scss
@@ -104,6 +104,7 @@
                     user-select: none;
                     margin-right: 5px;
                     transform: translate(0px, 2px);
+                    vertical-align: top;
                 }
                 .rankQuiz{
                     padding-left: 23px;
@@ -120,6 +121,7 @@
                     color: $blueGrey;
                     line-height: 18px;
                     font-size: $ft-small;
+                    vertical-align: top;
                 }
                 .commentQuiz{
                     padding-left: 23px;
@@ -136,6 +138,7 @@
                     border: 0px;
                     user-select: none;
                     color: $blueGrey;
+                    vertical-align: top;
                 }
             }
         }
